--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ fastapi = "^0.109.2"
 uvicorn = "^0.27.1"
 sqlmodel = "^0.0.14"
 pandas = "^2.2.0"
+psycopg = "^3.1.18"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
+httpx = "^0.27.0"
+psycopg-binary = "^3.1.18"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
