--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.10.11"
 fastapi = "^0.109.2"
+pydantic = "^2.6.1"
 uvicorn = "^0.27.1"
-sqlmodel = "^0.0.14"
+sqlmodel = "^0.0.16"
+SQLAlchemy = "2.0.27"
 pandas = "^2.2.0"
 psycopg = "^3.1.18"
 psycopg2 = "^2.9.9"
 psycopg2-binary = "^2.9.9"
-httpx = "^0.27.0"
 psycopg-binary = "^3.1.18"
+annotated-types = "^0.6.0"
+httptools = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -23,6 +26,8 @@ flake8 = "^7.0.0"
 mypy = "^1.8.0"
 pylint = "^3.0.3"
 coverage = "^7.4.1"
+black = "^24.2.0"
+httpx = "^0.27.0"
 
 [build-system]
 requires = ["poetry-core"]
