--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Click>=7.0
-fastapi>=0.100
-h11>=0.9.0
-httptools>=0.0.13
-psycopg2-binary>=2.8.4
+Click>=8.0
+fastapi>=0.109
+h11>=0.14
+httptools>=0.6
+psycopg>=3.1
+psycopg2-binary>=2.9
 pydantic>=2.0
 SQLAlchemy>=2.0
-starlette>=0.12.9
-typing>=3.7.4.1
-uvicorn>=0.20
-uvloop>=0.14.0
-websockets>=8.1
+starlette>=0.36
+typing>=3.7.4
+uvicorn>=0.27
+uvloop>=0.19
+websockets>=12.0
 sqlmodel>=0.0.16
-psycopg
