--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pylint = "^3.0.3"
 coverage = "^7.4.1"
 black = "^24.2.0"
 httpx = "^0.27.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
